@@ -97,6 +97,11 @@
 		<!-- Source Sorting -->
 		<setting type="lsep" label="40331"/>
 		<setting id="general.sortsources" type="enum" label="40332" values="Torrents|Embeds" default="0" />
+		<!-- Prioritized Source Sorting -->
+		<setting type="lsep" label="40465"/>
+		<setting id="general.prioritize_dualaudio" type="bool" label="40462" default="false" enable="eq(2,false) + eq(1,false)" />
+		<setting id="general.prioritize_multisubs" type="bool" label="40463" default="false" enable="eq(1,false) + eq(-1,false)" />
+		<setting id="general.prioritize_batches" type="bool" label="40464" default="false" enable="eq(-2,false) + eq(-1,false)" />
 		<!-- Search Filtering -->
 		<setting type="lsep" label="40409"/>
 		<setting id="search.adult" type="bool" label="40410" default="false" />
